--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
 .col-sm {
-    border: 5px solid;
-    width: 5px;
+    border: 0.9px solid;
+    width: 0.9px;
     background: lightblue;
     font-family: 'Roboto', sans-serif;
 }
 
 .table{
-    border: 5px solid;
-    width: 5px ;
+    border: 0.9px solid;
+    width: 0.9px ;
     font-family: 'Philosopher', sans-serif;
 }
+.col-sm1{
+     font-family: "Cambria Math", sans-serif;
+     background: aqua;
+
+ }
+
+.card-title1{
+    font-family: 'Hind', sans-serif;
+    background: chartreuse;
+}
+
