--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,5 @@
-.col-sm {
-    border: 0.9px solid;
-    width: 0.9px;
-    background: lightblue;
-    font-family: 'Roboto', sans-serif;
+.bd-example {
+    width: 50%;
+    display: flex;
+    justify-content: center;
 }
-
-.table{
-    border: 0.9px solid;
-    width: 0.9px ;
-    font-family: 'Philosopher', sans-serif;
-}
-.col-sm1{
-     font-family: "Cambria Math", sans-serif;
-     background: aqua;
-
- }
-
-.card-title1{
-    font-family: 'Hind', sans-serif;
-    background: chartreuse;
-}
-
