--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
-.bd-example {
-    width: 50%;
-    display: flex;
-    justify-content: center;
+
+
+
+.col{
+    border: solid;
+}
+
+.ml-1 {
+    margin-top: 10px;
 }
