--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
-
-.col{
+.col {
     border: solid;
+}
+
+
+.image {
+    width: 100%;
+    height: 50%;
+    background-image: url("background-trunk1.jpg");
+
+}
+
+.image1 {
+    background-size: 150%;
+    width: 100%;
+    height: 100%;
+    background-color: #2B201C;
+
+
 }
