--- a/Maquette 2/styles.css
+++ b/Maquette 2/styles.css
@@ -8,11 +8,12 @@
 
 .col-4{
     margin: 3rem 0;
+  width: 2%;
 }
 
 .background-2 {
     background-color: #f1f1f1;
 }
 .border {
-    border: 2px;
+
 }
