--- a/Maquette 2/styles.css
+++ b/Maquette 2/styles.css
@@ -2,15 +2,12 @@
     background: url("../Image/src_assets_img_background-louis-vuitton.svg") rgb(68, 52, 47);
 }
 .background-2 {
-    background-color: #ddd;
+    background-color: rgb(233, 233, 233);
 }
-.title {
-    color: white;
+.background4{
+    background-color: white;
 }
-.badge-danger {
-    margin: 1rem 0;
-    width: 40px;
-}
+
 .from-control {
     padding-bottom: 15px;
 }
@@ -22,35 +19,54 @@
     padding-block: 3rem;
     margin-top: 3rem;
 }
-.border-brown {
-    padding : 1rem;
-    padding-left: 2rem;
+.border-width {
+    margin-top: 4rem;
+   border-width: 4px !important
 }
+
 .col-sm-3 {
-    padding : 1rem;
-    padding-left: 2rem;
+    margin-bottom: 1rem;
+}
+.title {
+    color: white;
 }
 
 .text, .text1 {
     color: white;
-}
-.h6{
-    margin: 1rem 0;
 }
 
 .text2 {
     color: rgb(163, 124, 113);
 
 }
+.text-center5 {
+    color: rgb(163, 124, 113);
+}
+
 .image{
     width: 50px;
     height: 50px;
 }
+.color-brown{
+    color: rgb(163, 124, 113);
+}
+.color{
+    border-color: #dee2e6 !important;
+}
+.color-1 {
+    color: #A07C71;
+}
+.color-2 {
+    color: darkolivegreen;
+}
 
 .fas{
-    color: rgb(163, 124, 113);
     margin-right: 1rem;
-
+    margin-bottom: 2rem;
+}
+.badge-danger {
+    margin: 1rem 0;
+    width: 30px;
 }
 
 .badge {
@@ -58,15 +74,24 @@
     padding: 1px 1px !important;
 }
 
-.dropdown-divider{
-    margin-top: 1rem;
-
-
-}
-.margin{
-    margin: 2rem 0;
-}
 .mx-auto{
-    padding-top: 40rem;
+    padding-top: 18rem;
+}
+.two-blocks2 {
+    margin-bottom: 4rem;
 }
 
+.two-blocks {
+    padding : 1rem;
+}
+.glyphicon {
+    color: #c1c9d1;
+    text-shadow: -2px -2px -2px ;
+    font-size: 1.8em;
+    margin-bottom: 1rem;
+    margin-right: 30px;
+
+}
+.font-italic {
+    color: #c1c9d1;
+}
